cne more progress

--- a/cne/todo
+++ b/cne/todo
@@ -18,3 +18,6 @@ todo later : set defaults for the constructor parameters
 
 ask marcus for the tolerence and epoch
 also it looks bad that all are mutated except the best
+
+problem for any function evaluation 
+network and others
