--- a/cne/todo
+++ b/cne/todo
@@ -19,14 +19,13 @@ todo later : set defaults for the constructor parameters
 ask marcus for the tolerence and epoch
 also it looks bad that all are mutated except the best
 
-problem for any function evaluation 
-network and others
 
+order from flipkart
 
+story of my life
+written in the starts
+paris
+attention
+bruno thats what i like
+somebody i used to knw
 
-
-
-
-getters and setters should be that - the code can take them changing in mid way and adjust accordingly.
-
-to set the constructor termination parameters taking care of the default values
