working till now

--- a/cne/todo
+++ b/cne/todo
@@ -29,3 +29,9 @@ attention
 bruno thats what i like
 somebody i used to knw
 
+work and open source at the same time
+what about indentations automatic in editor
+scope of ML
+how is his work in the office
+how is free university related if he does job
+
